Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8312979

Fix assembler_aarch64.hpp after JDK-8311847

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4 P4
    • 22
    • 22
    • hotspot
    • 22
    • b08

      This fails on windows-aarch64 in GHA.

      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-server_libjvm_gtest_objs_BUILD_GTEST_LIBJVM_pch.obj:
      BUILD_GTEST_LIBJVM_pch.cpp
      d:\a\jdk\jdk\src\hotspot\cpu\aarch64\assembler_aarch64.hpp(657): error C2220: the following warning is treated as an error
      d:\a\jdk\jdk\src\hotspot\cpu\aarch64\assembler_aarch64.hpp(657): warning C4334: '<<': result of 32-bit shift implicitly converted to 64 bits (was 64-bit shift intended?)
         ... (rest of output omitted)

      * All command lines available in /d/a/jdk/jdk/build/windows-aarch64/make-support/failure-logs.
      === End of repeated output ===

      No indication of failed target found.
      HELP: Try searching the build log for '] Error'.

            coleenp Coleen Phillimore
            coleenp Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: