8312979: Fix assembler_aarch64.hpp after JDK-8311847